# uVM

./: .gitignore  AGENTS.md  ASM.md  CMakeLists.txt  PCB_History.md  Readme.md  main.c  vm.c  vm.h
arduino/: Console.cpp  Console.h  Interface.cpp  Interface.h  Memory.cpp  Memory.h  ShiftInput.cpp  ShiftInput.h  ShiftOutput.cpp  ShiftOutput.h  VM.c  VM.h  arduino.ino  console.cpp  console.h  memory.cpp  memory.h  pins.h  util.c  util.h  vm.c  vm.h
asm/: asm.c  asm.ebnf  asm.h  token.c  token.h  tree.c  tree.h  tree.md
docs/superpowers/notes/: 2026-06-30-asm-parse-status.md
pcb/: InputOutput.sch  fp-lib-table  sym-lib-table  uvm-cache.lib  uvm.dcm  uvm.kicad_pcb  uvm.lib  uvm.pro  uvm.sch
pcb/uvm.pretty/: TOGGLE_SPDT_ON_ON_2MS.kicad_mod
programs/: basic.asm
programs/control_flow/: conditional.asm  jump_table.asm
programs/memory/: array_sum.asm  memcpy.asm
programs/patterns/: multiply.asm  subroutine.asm
tests/: test_alias.c  test_data.c  test_dx.c  test_emit.c  test_empty.c  test_eof.c  test_free.c  test_instruction.c  test_instructions_q.c  test_instructions_s.c  test_instructions_t.c  test_instructions_v.c  test_integration.sh  test_operand_mem.c  test_operand_reg.c  test_operand_rel.c  test_operand_test.c  test_operand_value.c  test_origin.c  test_resolve.c
